@startuml

title __APP's Class Diagram__\n

  package com.shang.livedata {
    class BuildConfig {
    }
  }
  

  package com.shang.livedata {
    package com.shang.livedata.Calender {
      class ColorfulMonthView {
      }
    }
  }
  

  package com.shang.livedata {
    package com.shang.livedata.Calender {
      class ColorfulWeekView {
      }
    }
  }
  

  package com.shang.livedata {
    package com.shang.livedata.Room {
      class EventDao_Impl {
      }
    }
  }
  

  package com.shang.livedata {
    package com.shang.livedata.Calender {
      class MyWeekBar {
      }
    }
  }
  

  package com.shang.livedata {
    package com.shang.livedata.Room {
      class RoomDatabase_Impl {
      }
    }
  }
  

  package com.shang.livedata {
    package com.shang.livedata.Calender {
      class SimpleMonthView {
      }
    }
  }
  

  package com.shang.livedata {
    package com.shang.livedata.Calender {
      class SimpleWeekView {
      }
    }
  }
  

  ColorfulMonthView -up-|> MonthView
  ColorfulWeekView -up-|> WeekView
  EventDao_Impl -up-|> EventDao
  EventDao_Impl o-- DateConverter : __dateConverter
  MyWeekBar -up-|> WeekBar
  RoomDatabase_Impl -up-|> RoomDatabase
  RoomDatabase_Impl o-- EventDao : _eventDao
  SimpleMonthView -up-|> MonthView
  SimpleWeekView -up-|> WeekView


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
